# linkedin_job_scraper_microservice

./: .dockerignore  Dockerfile  README.md  jobs.html  pyproject.toml  requirement.txt
src/wbe_scraper/: __init__.py  kafka_producer.py  linkedin_job_scraper.py
